2013-06-30  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STSourceReader.m (-lineNumberForIndex:, -readNextToken): Tidy
    source.

2013-05-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STGrammar.y (temporaries): Allow empty list.
    * STGrammar.m: Regenerated.

2013-05-26  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * NSNumber+additions.h:
    * NSNumber+additions.m:
    * STBlock.h:
    * STBlock.m:
    * STBlockContext.h:
    * STBlockContext.m:
    * STBytecodeInterpreter.h:
    * STBytecodeInterpreter.m:
    * STBytecodes.h:
    * STBytecodes.m:
    * STCompiledCode.h:
    * STCompiledCode.m:
    * STCompiledMethod.h:
    * STCompiledMethod.m:
    * STCompiledScript.m:
    * STCompiler.h:
    * STCompiler.m:
    * STExecutionContext.h:
    * STExecutionContext.m:
    * STLiterals.h:
    * STLiterals.m:
    * STMethodContext.h:
    * STMethodContext.m:
    * STSmalltalkScriptObject.m:
    * STSourceReader.h:
    * STSourceReader.m:
    * STStack.h:
    * STStack.m:
    int->NSInteger transition

2013-04-06  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STSourceReader.m (-readNextToken): Fix bug where the last character
    of an identifier was dropped when the assignment operator ':=' follows
    it immediately.

2013-04-03  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * NSArray+additions.m (-collect:): Properly handle nil results from
    block.

2013-04-03  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STSourceReader.m (-lineNumberForIndex:): Revert broken fix and
    replace it by code that now works correctly for all kinds of line
    endings.

2013-03-25  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STBytecodeInterpreter.m (-returnValue:): Fix bug where the
    STInterpreterReturnException was not handled when a block returns nil.

2013-03-24  Wolfgang Lux  <wolfgang.lux@gmail.com>

    * STCompiler.m (-compileMethod:): Follow Smalltalk convention to
    return the receiver from a method without an explicit return
    statement.
